fixed right arrow position when browsing records on mobile theme, small visual changes for error,info,notice etc. message boxes

--- a/web/interface/themes/ndl/css/blueprint/screen.css
+++ b/web/interface/themes/ndl/css/blueprint/screen.css
@@ -97,7 +97,7 @@ textarea {width:390px;height:250px;padding:5px;}
 */
 form.inline {line-height:3;}
 form.inline p {margin-bottom:0;}
-.error, .alert, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:2px solid #ddd;}
+.error, .alert, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:none;border-radius:5px}
 .error, .alert {background:#fde1f6;color:#b30f8b;border-color:#ffc6f1;}
 .notice {background:#fff6bf;color:#514721;border-color:#ffe26e;}
 .success {background:#cdf5eb;color:#005a60;border-color:#a0e4d3;}
